# cb_jtag

./: .gitignore  99-dirtyjtag.rules  Makefile  README_FTDI_JTAG.md  README_get_ready.md  envsetup.sh  pyproject.toml
cb_jtag/: __init__.py  cb_bsr.py  cb_jlink.py  cb_jtag.py  cb_jtag_probe.py  cb_jtag_probe_base.py
cb_jtag_examples/: cb_jtag_ex0__nucleo-G474RE.py  cb_jtag_ex0__nucleo_G474RE.py  cb_jtag_probe_ex0.py
cb_jtag_tool/: cb_jtag_birds_view
test/: test_0_nucleo_G474RE.py  test_base.py  test_cb_jtag_probe.py
