[build-system]
requires = [
    "hatchling",
    "hatch-requirements-txt"
]

build-backend = "hatchling.build"

[project]
name = "cb_jtag"
requires-python = ">=3.12"
dynamic = [
  "version",
  "dependencies"
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
path = "./cb_jtag/__init__.py"


authors = [
  { name="Thomas", email="thomas@chriesibaum.dev" },
]

description = "Chriesibaum's jtag tools for boundary scan"

readme = "README.md"

license = { file="LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]


[tool.hatch.build.targets.wheel]
packages = ["cb_jtag/",
            "cb_jtag_examples/"]


[project.urls]
"Homepage" = "https://github.com/chriesibaum/cb-pyutils"

