[build-system]
requires = [
  "hatchling"
]

build-backend = "hatchling.build"

[project]
name = "cb_jtag"
requires-python = ">=3.12"
dynamic = [
  "version"
]
dependencies = [
  "pyusb",
  "pylink-square",
  "key_stroke",
  "cb_bsdl_parser>=0.9.0",
]
authors = [
  { name="Thomas", email="thomas@chriesibaum.dev" },
]

description = "Chriesibaum's jtag tools for boundary scan"

readme = "README.md"

license = { file="LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pyyaml",
  "pycodestyle",
  "autopep8",
  "bandit",
  "hatch",
  "twine",
  "flake8",
]

[tool.hatch.version]
path = "./cb_jtag/__init__.py"


[tool.hatch.build.targets.wheel]
packages = ["cb_jtag/",
            "cb_jtag_examples/"]

[project.scripts]
cb_jtag_ex0__nucleo_G474RE = "cb_jtag_examples.cb_jtag_ex0__nucleo_G474RE:main"

[project.urls]
"Homepage" = "https://github.com/chriesibaum/cb-pyutils"

